Changelog for Articles.

Articles 1.5.0
===============================
- [#7517] Add ability to duplicate Articles Container
- Deprecate custom DB fields to use new properties field on modResource

Articles 1.4.7
===============================
- [#7069] Add articles.article_show_longtitle setting for toggling on/off the longtitle field when editing Articles
- [#7057] Fix issue with RTEs and updating an Article

Articles 1.4.6
===============================
- Fix issue with Articles snippet and $this reference

Articles 1.4.5
===============================
- [#6832],[#6697],[#6596] Remove 255 char limit from Article summary field, remove 100 char tags field limit

Articles 1.4.4
===============================
- [#6641] Add option to turn off richtext editing for Articles in a Container
- [#6897] Add offset as option to latest posts display
- [#6639] Add option to change default sorting for Articles in mgr container grid
- [#7001] Fix issue where disabling comments prevented other placeholders from displaying
- [#6980] Fix issue with fallback Twitter feed tpl
- [#6850] Enable multiple Articles snippet calls per page
- [#6625] Add in longtitle for Container in General Settings
- Fix issue where changing template settings did not activate save btn
- Add German, Russian, Czech translations
- [#6626] Improve pub-date checking on WordPress import
- [#6601] Fix template variables tab showing when creating a new article
- [#6966] Fix issue with non-web contexts
- Update Quip to 2.2.0-pl

Articles 1.4.3
===============================
- [#6553] Fix issue with build where snippets were set as chunks
- Update tagLister to 1.1.5

Articles 1.4.2
===============================
- Add Articles snippet for easy displaying of articles anywhere on site
- [#6534] Add confirmation for delete article in grid
- [#6535] Fix issue with incorrect include reference for update services
- [#6535] Fix issue with url generation for twitter posting on first save